k8s/04-product-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
  namespace: service-mysql-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: maikergonzales/product-service:v1
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: service-mysql-space
spec:
  selector:
    app: product-service
  ports:
    - port: 8080
  type: LoadBalancer
